<resources>
    <string name="app_name">Culto</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign up</string>
    <string name="back_button">Back</string>
    <string name="name_hint">Your name</string>
    <string name="age_hint">Your age</string>
    <string name="name_label">Username</string>
    <string name="age_label">Age</string>
    <string name="user_info">Info</string>
    <string name="logout_button">Logout</string>
    <string name="empty_valid_error">Input is empty</string>
    <string name="success_login_message">Logged in!</string>
    <string name="surname_registration">Your surname</string>
    <string name="succes_reg_message">Signed up succesfully</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="confirm_passwrod">Confirm password</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>

</resources>
